# crossword-solver

./: .gitignore  Dockerfile  README.md  pyproject.toml
crossword_solver/: prepare.py  read.py  scrape.py  train.py
crossword_solver/scrape/: __init__.py  arkadium.py  guardian.py  sun.py
tests/: test_crossword_solver.py
