[tool.poetry]
name = "crossword-solver"
version = "0.1.0"
description = ""
authors = ["Cameron Martin <cameronmartin123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.24.0"
beautifulsoup4 = "^4.9.1"
tensorflow = "^2.2.0"
tensorflow-datasets = "^3.1.0"
numpy = "^1.19.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
mypy = "^0.782"
black = "^19.10b0"

[tool.poetry.scripts]
scrape_guardian = "crossword_solver.scrape:scrape_guardian"
scrape_sun = "crossword_solver.scrape:scrape_sun"
scrape_independent = "crossword_solver.scrape:scrape_independent"
scrape_mirror = "crossword_solver.scrape:scrape_mirror"
prepare_guardian = "crossword_solver.prepare:prepare_guardian"
prepare_independent = "crossword_solver.prepare:prepare_independent"
prepare_mirror = "crossword_solver.prepare:prepare_mirror"
prepare_all = "crossword_solver.prepare:prepare_all"
train = "crossword_solver.train:train"
predict = "crossword_solver.train:predict_repl"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

